# pattern-matching

./: .gitignore  CMakeLists.txt  Makefile  README.md  apicall.cpp  cmake_install.cmake  main  main.cpp  main.gcda  suffixtrie.cpp  suffixtrie_hashmap.cpp  words.json
cmake/: coverage.cmake
coverage/: coverage.info
coverage/results/: index-sort-f.html  index-sort-l.html  index.html
coverage/results/9/: index-sort-f.html  index-sort-l.html  index.html  initializer_list.func-sort-c.html  initializer_list.func.html  initializer_list.gcov.html  new.func-sort-c.html  new.func.html  new.gcov.html  tuple.func-sort-c.html  tuple.func.html  tuple.gcov.html  utility.func-sort-c.html  utility.func.html  utility.gcov.html
coverage/results/9/bits/: alloc_traits.h.func-sort-c.html  alloc_traits.h.func.html  alloc_traits.h.gcov.html  allocator.h.func-sort-c.html  allocator.h.func.html  allocator.h.gcov.html  basic_string.h.func-sort-c.html  basic_string.h.func.html  basic_string.h.gcov.html  basic_string.tcc.func-sort-c.html  basic_string.tcc.func.html  basic_string.tcc.gcov.html  char_traits.h.func-sort-c.html  char_traits.h.func.html  char_traits.h.gcov.html  cpp_type_traits.h.func-sort-c.html  cpp_type_traits.h.func.html  cpp_type_traits.h.gcov.html  deque.tcc.func-sort-c.html  deque.tcc.func.html  deque.tcc.gcov.html  functional_hash.h.func-sort-c.html  functional_hash.h.func.html  functional_hash.h.gcov.html  hashtable.h.func-sort-c.html  hashtable.h.func.html  hashtable.h.gcov.html  hashtable_policy.h.func-sort-c.html  hashtable_policy.h.func.html  hashtable_policy.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html  move.h.func-sort-c.html  move.h.func.html  move.h.gcov.html  ptr_traits.h.func-sort-c.html  ptr_traits.h.func.html  ptr_traits.h.gcov.html  stl_algo.h.func-sort-c.html  (+38 more)
coverage/results/9/ext/: aligned_buffer.h.func-sort-c.html  (+14 more)
documentation/: implementation.md  requirements.md  test_report.md  testing.md  user_guide.md
documentation/progress_reports/: time_report.md  week1.md  week2.md  week2_2.md  week3.md  week4.md  week5.md  week6.md  week_2.md  week_3.md  week_4.md  week_5.md  week_6.md  week_7.md
includes/: apicall.cpp  apicall.h  helperfunctions.cpp  helperfunctions.h  logic.cpp  logic.h  suffixtrie.cpp  suffixtrie.h  tree.cpp  trie.cpp  trie.h  ui.cpp  ui.h
suffixtree/: pyproject.toml
suffixtree/src/algorithm/: ukkonen.py
suffixtree/src/tests/: algorithm_test.py
tests/: catch.hpp  complexity_test.h  main_test.cpp  regular_test.h  test_cases.cpp  testcases.txt  trie_test.cpp
(+36 files in other folders)
