[tool.poetry]
name = "suffixtree"
version = "0.1.0"
description = ""
authors = ["r-elsa <elsaryynanen@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
graphviz = "^0.20.3"
requests = "^2.31.0"
pytest = "^8.2.0"
coverage = "^7.5.1"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
coverage = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
